[#51657071] Sidebars remain in the viewport, no longer hidden by scrolling
 - Reverts #50208579

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -44,7 +44,7 @@
 
     #sidebar_wrapper {
         z-index: 10;
-        position: absolute;
+        position: fixed;
         right: 0;
         top: $header-height;
         bottom: 0;
